--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Snappykit icons</title>
+	<title>Gezatone icons</title>
 	<link rel="stylesheet" href="styles.css">
 	<script src="script.js" defer></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-	<a href="https://github.com/snappykit/snappykit-graphics" class="ribbon">Github</a>
+	<a href="https://github.com/gezatone/gezatone-graphics" class="ribbon">Github</a>
 	<div class="icns"></div>
 </body>
 </html>
